Academic Calendar: fix alignment of table headers #308

--- a/resources/gato-template-mobilefirst/css/_academiccalendar.scss
+++ b/resources/gato-template-mobilefirst/css/_academiccalendar.scss
@@ -479,6 +479,13 @@
       th {
         background-color: $sandstone;
         border: 0;
+        text-align: left;
+        &.date-header { padding-left: 6rem; }
+        &.event-header { padding-left: 2rem; }
+        @media (max-width: $mn-breakpoint) {
+          &.date-header { padding-left: 3.3rem; }
+          &.event-header { padding-left: 0.5rem; }
+        }
       }
       tbody {
         tr.has-background td {background-color: #F7F7F7};
